# Kestra_cabo_de_santo_agostinho

./: .env  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
consulta/elements/: consulta_elements.py
consulta/routers/: exec_consulta.py
consulta/service/: consulta_service.py
utils/: utils.py
