[project]
name = "kestra-cabo-de-santo-agostinho-v3"
version = "0.1.0"
description = ""
authors = [
    {name = "JoaoTakasake00",email = "jv2takasake@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "selenium-tools @ git+https://github.com/rodrigoneal/selenium-tools.git",
    "beautifulsoup4 (>=4.14.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
